image-toolkit/misc/iptables.save
# Default
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [0:0]


# Loopback (localhost)
-A INPUT -i lo -j ACCEPT
# Already existing connections
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# Admin controls
# Pings
-A INPUT -p icmp -s {ADMIN_SUBNET} -j ACCEPT -i client
# SSH
-A INPUT -p tcp -m tcp --dport 22 -s {ADMIN_SUBNET} -j ACCEPT -i client
# Internal services
-A INPUT -p tcp -m tcp --dport 10050 -s {ADMIN_SUBNET} -j ACCEPT -i client
# VLC output
-A INPUT -p tcp -m tcp --dport 100 -s {ADMIN_SUBNET} -j ACCEPT -i client
# HTTP services
-A INPUT -p tcp -m tcp -m multiport --dports 80,443 -s {ADMIN_SUBNET} -j ACCEPT -i client
# Node exporter output
-A INPUT -p tcp -m tcp --dport 9100 -s {ADMIN_SUBNET} -j ACCEPT -i client

# Coach views
# VLC output
-A INPUT -p tcp -m tcp --dport 100 -s {COACH_SUBNET} -j ACCEPT -i client


# Loopback (localhost)
-A OUTPUT -o lo -j ACCEPT
# Already existing connections
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# Pings
-A OUTPUT -p icmp -d {ADMIN_SUBNET} -j ACCEPT -o client
-A OUTPUT -p icmp -d 8.8.8.8,8.8.4.4,1.1.1.1,1.0.0.1 -j ACCEPT
# HTTP, HTTPS to portal(s)
-A OUTPUT -p tcp -m tcp -m multiport --dports 80,443 -d {ADMIN_SUBNET} -j ACCEPT -o client
# Internal services
-A OUTPUT -p tcp -m tcp -m multiport --dports 8000:9000 -d {ADMIN_SUBNET} -j ACCEPT -o client

# Backup server
-A OUTPUT -p tcp -m tcp -m multiport --dports 80,443 -d {WEBSERVER_PUBLIC_DOMAIN_NAME} -j ACCEPT

# VPN outgoing. Restricted to central server at the address "vpn.vnoi.info". Specified in /etc/hosts.
-A OUTPUT -p tcp -m tcp -m multiport -d vpn.vnoi.info --dports 80,443,51820 -j ACCEPT
-A OUTPUT -p udp -m udp -m multiport -d vpn.vnoi.info --dports 80,443,51820 -j ACCEPT

# NTP, time sync. Restricted to
# Ubuntu's default: ntp.ubuntu.com
# Windows's choices: time.windows.com
-A OUTPUT -p udp -m udp --dport 123 -d ntp.ubuntu.com,time.windows.com -j ACCEPT
# Resolved using /etc/hosts rather than DNS servers

COMMIT
